--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-
-spring.datasource.url=jdbc:h2:mem:cruddb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=user
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username= root
+spring.datasource.password= 
 spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
